--- a/public/styles/player-waiting-page.css
+++ b/public/styles/player-waiting-page.css
@@ -85,6 +85,17 @@ button:active {
     margin: 10px 0;
 }
 
+
+ .material-symbols-outlined {
+     font-variation-settings:
+             'FILL' 0,
+             'wght' 400,
+             'GRAD' 0,
+             'opsz' 24;
+     cursor: pointer;
+ }
+
+
 /*loader styling*/
 .loader-container{
   visibility: hidden;
