--- a/views/player-name-page.ejs
+++ b/views/player-name-page.ejs
@@ -87,7 +87,7 @@
 
     function errorHandlingRounds(noRounds) {
         if (isNaN(noRounds) || noRounds <= 0) {
-            alert("Please enter a valid number of rounds.");
+            alert("Enter a valid number of rounds.");
             return true;  // Returns true to stop the form submission
         }
         return false;
