--- a/public/styles/join-room-page.css
+++ b/public/styles/join-room-page.css
@@ -29,6 +29,29 @@
     position: relative;
 }
 
+/*popup message styling*/
+.popupMessage {
+    text-align: center;
+    position: fixed;
+    bottom: -100px; /* Start off-screen */
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px;
+    background-color: var(--button-bg);
+    box-shadow: 0px 4px 12px var(--shadow-color);
+    border-radius: 8px;
+    border:  solid var(--border-color) 1px;
+    color: var(--primary-text);
+    font-size: 1.3rem;
+    border-radius: 5px;
+    width: 90%;
+    max-width: 400px;
+    box-sizing: border-box;
+    opacity: 0; /* Initially invisible */
+    transition: transform 0.5s ease, opacity 0.5s ease; /* Smooth transition for slide-up and fade-in */
+    z-index: 1000;
+}
+
 .header{
     font-size: 2rem;
 }
