--- a/views/create-join-room-page.ejs
+++ b/views/create-join-room-page.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="header"><span style="font-size: 2.5rem;">M</span>ulti-Player MODE</p>
+        <p class="header"><span style="font-size: 2.5rem;">M</span>ulti-<span style="font-size: 2.5rem;">P</span>layer <span style="font-size: 2.5rem;">M</span>ode</p>
         <div class="sub-container">
             <button onclick="createRoom()">Create Room</button>
             <button onclick="joinRoom()">Join Room</button>
