--- a/views/move-selection-page.ejs
+++ b/views/move-selection-page.ejs
@@ -18,8 +18,8 @@
                 <p id="player_1_score">12</p>
             </div>
             <div class="round-container">
-                <p>curr round</p>
-                <p id="curr_round">5</p>
+                <p>Score to Win</p>
+                <p id="curr_round" style="color: #563A9C">5</p>
             </div>
             <div class="player-container">
                 <p id="player_2_name">ashwin</p>
