--- a/public/styles/join-room-page.css
+++ b/public/styles/join-room-page.css
@@ -120,3 +120,9 @@ input[type="number"]:focus {
     visibility: hidden;
 }
 
+@media screen and (max-width: 800px) {
+    .popupMessage{
+        font-size: 1rem;
+    }
+}
+
