--- a/public/styles/player-move-display-page.css
+++ b/public/styles/player-move-display-page.css
@@ -171,3 +171,9 @@
         width: 500px;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .popupMessage{
+        font-size: 1rem;
+    }
+}
