--- a/views/move-selection-page.ejs
+++ b/views/move-selection-page.ejs
@@ -15,15 +15,15 @@
         <div class="header-container">
             <div class="player-container">
                 <p id="player_1_name">ashwin</p>
-                <p id="player_1_score">12</p>
+                <p id="player_1_score" style="font-weight: bold">12</p>
             </div>
             <div class="round-container">
                 <p>Score to Win</p>
-                <p id="curr_round" style="color: #563A9C">5</p>
+                <p id="curr_round" style="color: purple;font-weight: bold">5</p>
             </div>
             <div class="player-container">
                 <p id="player_2_name">ashwin</p>
-                <p id="player_2_score">12</p>
+                <p id="player_2_score" style="font-weight: bold">12</p>
             </div>
         </div>
         <p class="header">Make your move</p>
